[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "yt_to_xspf"
authors = [{name = "Çağatay Yiğit Şahin", email = "cyigitsahin@outlook.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "yt-dlp"
]

[project.scripts]
yt-to-xspf = "yt_to_xspf:main"